--- a/package.json
+++ b/package.json
@@ -82,12 +82,14 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "events": "^3.3.0",
     "husky": "4.3.8",
     "jest": "26.6.3",
     "jest-axe": "^4.1.0",
     "jest-styled-components": "^7.0.3",
     "lint-staged": "10.5.3",
     "next": "10.0.5",
+    "node-mocks-http": "^1.10.1",
     "prettier": "2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
