--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
     "safe-compare": "^1.1.4"
   },
   "devDependencies": {
@@ -61,9 +62,11 @@
     "@types/express": "4.17.11",
     "@types/jest": "26.0.20",
     "@types/jest-axe": "^3.5.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "14.14.21",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/safe-compare": "^1.1.0",
     "@types/testing-library__jest-dom": "5.9.5",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
