chore(jest): 🤖  converted jest to typescript

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "semantic-release": "17.3.3",
     "ts-jest": "26.4.4",
     "ts-loader": "8.0.16",
+    "ts-node": "^9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "tslib": "2.1.0",
     "ttypescript": "1.5.12",
