--- a/example/package.json
+++ b/example/package.json
@@ -82,7 +82,7 @@
     "react-select-event": "^4.1.2",
     "ts-jest": "^25.0.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4"
+    "typescript": "4.3.2"
   },
   "eslintConfig": {
     "extends": [
